minor spacing fix

--- a/src/scss/shop/_single-product.scss
+++ b/src/scss/shop/_single-product.scss
@@ -759,6 +759,7 @@
                 width: 100% !important;
             }
             .slick-dots{
+                bottom: -30px;
                 li{
                     width: 10px;
                     height: 10px;
